apps/20-media/qbittorrent/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: template-app
  labels:
    goldilocks.fairwinds.com/enabled: "true"
